# civitai-metadata-sorter

./: .flake8  .gitignore  .pylintrc  LICENSE  README.md  powershell_template.ps1  pyproject.toml
.github/workflows/: pullrequest.yml
sort/: __main__.py  sort.py
tests/: sort_test.py
tests/res/: expected.txt  input.txt
